--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="uz">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio - Ismingiz</title>
+  <title>Portfolio - Sotiboldiyev Komronbek</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
@@ -97,12 +97,13 @@
 </head>
 <body>
   <header>
-    <h1>Ismingiz Familiyangiz</h1>
-    <p>Frontend Developer | HTML, CSS, JavaScript</p>
-  </header>  <div class="container">
+    <h1>Sotiboldiyev Komronbek</h1>
+    <p>Frontend Dasturchi | HTML, CSS, JavaScript</p>
+  </header>
+  <div class="container">
     <section class="about">
       <h2>Men haqimda</h2>
-      <p>Salom! Men frontend dasturchiman. Soddalik va go‘zallikni birlashtirgan saytlar yaratishni yaxshi ko‘raman. Har bir loyiha men uchun yangi imkoniyat va o‘sishdir.</p>
+      <p>Salom! Men yosh frontend dasturchiman. HTML va CSS texnologiyalarini yaxshi bilaman, shuningdek mobil qurilmalarga mos saytlar yaratishni o‘rganmoqdaman. Maqsadim – foydalanuvchilarga qulay, zamonaviy va jozibali veb ilovalar yaratish.</p>
     </section><section class="skills">
   <h2>Ko‘nikmalar</h2>
   <ul>
@@ -118,22 +119,23 @@
   <h2>Loyihalar</h2>
   <div class="project-item">
     <h3>Portfolio Sayti</h3>
-    <p>O‘zim uchun tayyorlagan portfolio sayti — zamonaviy, sodda va mobilga moslashtirilgan dizayn.</p>
+    <p>Shaxsiy portfolio sayt – o‘zimni va ko‘nikmalarimni tanishtirish uchun yaratilgan. Dizayn sodda va zamonaviy bo‘lib, barcha qurilmalarda to‘g‘ri ko‘rinadi.</p>
   </div>
   <div class="project-item">
-    <h3>Landing Page</h3>
-    <p>Mahsulotni tanishtiruvchi oddiy landing sahifa. Foydalanuvchi e'tiborini jalb qilish uchun yaratilgan.</p>
+    <h3>Veb Sahifa Dizayni</h3>
+    <p>Kichik bizneslar uchun landing page dizayni – mijozlarni jalb qilishga qaratilgan. Ustuvorlik: soddalik, tez yuklanish va ko‘zga yoqimli interfeys.</p>
   </div>
 </section>
 
 <section class="contact">
   <h2>Bog‘lanish</h2>
-  <p>Email: sizningemail@misol.uz</p>
-  <p>Telegram: @username</p>
+  <p>Email: kamronbeksotiboldiyev008@gmail.com</p>
+  <p>Telegram: @sotibold1yev</p>
 </section>
 
-  </div>  <footer>
-    &copy; 2025 Ismingiz Familiyangiz. Barcha huquqlar himoyalangan.
+  </div>
+  <footer>
+    &copy; 2025 Sotiboldiyev Komronbek. Barcha huquqlar himoyalangan.
   </footer>
 </body>
 </html>
